--- a/index.html
+++ b/index.html
@@ -21,11 +21,18 @@
 <body>
   <!-- your code goes here -->
 
+  <!-- pre loader -->
+  <div class="preloader">
+    <img src="img/preloader.gif" alt="" class="preloader__img">
+  </div>
+  <!-- end pre loader -->
 
 
   <!-- scripts -->
+
   <!-- jquery -->
   <script src="js/jquery-3.3.1.min.js"></script>
+
   <!-- magnific -->
   <!-- <script src="plugins/magnific/jquery.magnific-popup.min.js"></script> -->
   <!-- magnific script -->
