Created overlay on the header

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         </h1>
       </article>
       <!-- end title -->
+
       <!-- video -->
         <div class="video__container">
           <video class="video__item" id="video" autoplay loop muted>
@@ -46,6 +47,12 @@
           </video>
         </div>
       <!-- end video -->
+
+      <!-- video overlay -->
+        <div class="video__overlay">
+
+        </div>
+      <!-- end video overlay -->
     </header>
   <!-- end header section -->
 
