Finished the layout about Header and Sidebar

--- a/index.html
+++ b/index.html
@@ -1,33 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Agency Recording</title>
-  <!-- main css -->
-  <link rel="stylesheet" href="css/main.css">
-  <!-- font awesome -->
-  <script src="js/all.js"></script>
-  <!-- magnific -->
-  <!-- <link rel="stylesheet" href="plugins/magnific/magnific-popup.css"> -->
-  <!-- owl carousel css-->
-  <!-- <link rel="stylesheet" href="plugins/owl/owl.carousel.min.css"> -->
-  <!--owl carousel theme  -->
-  <!-- <link rel="stylesheet" href="plugins/owl/owl.theme.default.css"> -->
-</head>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Agency Recording</title>
+    <!-- main css -->
+    <link rel="stylesheet" href="css/main.css">
+    <!-- font awesome -->
+    <script src="js/all.js"></script>
+    <!-- magnific -->
+    <!-- <link rel="stylesheet" href="plugins/magnific/magnific-popup.css"> -->
+    <!-- owl carousel css-->
+    <!-- <link rel="stylesheet" href="plugins/owl/owl.carousel.min.css"> -->
+    <!--owl carousel theme  -->
+    <!-- <link rel="stylesheet" href="plugins/owl/owl.theme.default.css"> -->
+  </head>
 
-<body>
-  <!-- your code goes here -->
+  <body>
+    <!-- your code goes here -->
 
-  <!-- pre loader -->
-  <div class="preloader">
-    <img src="img/preloader.gif" alt="" class="preloader__img">
-  </div>
-  <!-- end pre loader -->
+    <!-- pre loader -->
+    <div class="preloader">
+      <img src="img/preloader.gif" alt="" class="preloader__img">
+    </div>
+    <!-- end pre loader -->
 
-  <!-- header section -->
+    <!-- header section -->
     <header class="header" id="header">
       <!-- title -->
       <article class="banner">
@@ -38,43 +38,64 @@
       <!-- end title -->
 
       <!-- video -->
-        <div class="video__container">
-          <video class="video__item" id="video" autoplay loop muted>
-            <source src="video/Working-it/Mp4/Working-it.mp4" type="video/mp4">
-            <source src="video/Working-it/Ogv/Working-it.ogv" type="video/ogv">
-            <source src="video/Working-it/Webm/Working-it.webm" type="video/webm">
-            browser does not support eh video tag
-          </video>
-        </div>
+      <div class="video__container">
+        <video class="video__item" id="video" autoplay loop muted>
+          <source src="video/Working-it/Mp4/Working-it.mp4" type="video/mp4">
+          <source src="video/Working-it/Ogv/Working-it.ogv" type="video/ogv">
+          <source src="video/Working-it/Webm/Working-it.webm" type="video/webm">
+          browser does not support eh video tag
+        </video>
+      </div>
       <!-- end video -->
 
       <!-- video overlay -->
-        <div class="video__overlay">
-
-        </div>
+      <div class="video__overlay"></div>
       <!-- end video overlay -->
+
+      <!-- nav btn -->
+      <div class="navBtn">
+        <i class="fas fa-bars"></i>
+      </div>
+      <!-- end nav btn -->
+
+      <!-- nav bar -->
+      <nav class="nav">
+        <ul class="nav__links">
+          <li>
+            <a href="#" id="home" class="nav__single-link">
+              <img src="img/logo.svg" alt="logo">
+            </a>
+          </li>
+          <li><a href="#home" class="nav__single-link">home</a></li>
+          <li><a href="#contact" class="nav__single-link">contact</a></li>
+          <li><a href="#projects" class="nav__single-link">projects</a></li>
+          <li><a href="#progress" class="nav__single-link">progress</a></li>
+        </ul>
+      </nav>
+      <!-- end nav bar -->
+
     </header>
-  <!-- end header section -->
+    <!-- end header section -->
 
-  <!-- scripts -->
+    <!-- scripts -->
 
-  <!-- jquery -->
-  <script src="js/jquery-3.3.1.min.js"></script>
+    <!-- jquery -->
+    <script src="js/jquery-3.3.1.min.js"></script>
 
-  <!-- magnific -->
-  <!-- <script src="plugins/magnific/jquery.magnific-popup.min.js"></script> -->
-  <!-- magnific script -->
-  <!-- <script src="plugins/magnific/magnific.js"></script> -->
-  <!-- numscroller -->
-  <!-- <script src="plugins/numscroller-1.0.js"></script> -->
-  <!-- owl carousel -->
-  <!-- <script src="plugins/owl/owl.carousel.min.js"></script> -->
-  <!-- owl js -->
-  <!-- <script src="plugins/owl/owl.js"></script> -->
-  <!-- app js  -->
+    <!-- magnific -->
+    <!-- <script src="plugins/magnific/jquery.magnific-popup.min.js"></script> -->
+    <!-- magnific script -->
+    <!-- <script src="plugins/magnific/magnific.js"></script> -->
+    <!-- numscroller -->
+    <!-- <script src="plugins/numscroller-1.0.js"></script> -->
+    <!-- owl carousel -->
+    <!-- <script src="plugins/owl/owl.carousel.min.js"></script> -->
+    <!-- owl js -->
+    <!-- <script src="plugins/owl/owl.js"></script> -->
+    <!-- app js  -->
 
-  <script src="js/app.js"></script>
-  <!--  -->
-</body>
+    <script src="js/app.js"></script>
+    <!--  -->
+  </body>
 
 </html>
