Added the social icons

--- a/index.html
+++ b/index.html
@@ -74,6 +74,20 @@
       </nav>
       <!-- end nav bar -->
 
+      <!-- social icons -->
+      <div class="social-icons">
+        <a href="#" class="social-icon social-icon__facebook">
+          <i class="fab fa-facebook"></i>
+        </a>
+        <a href="#" class="social-icon social-icon__twitter">
+          <i class="fab fa-twitter"></i>
+        </a>
+        <a href="#" class="social-icon social-icon__instagram">
+          <i class="fab fa-instagram"></i>
+        </a>
+      </div>
+      <!-- end social icons -->
+
     </header>
     <!-- end header section -->
 
